--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <body>
     <div class="calculator">
       <div class="calculator__display">
-        <div class="calculator__display-top">history</div>
+        <div class="calculator__display-top">H</div>
         <div class="calculator__display-bottom">0</div>
       </div>
       <div class="calculator__keys">
         <button class="button">AC</button>
         <button class="button">C</button>
         <button class="button">M</button>
-        <button class="button">+/-</button>
+        <button class="button">&plusmn;</button>
         <button class="button">7</button>
         <button class="button">8</button>
         <button class="button">9</button>
@@ -26,7 +26,7 @@
         <button class="button">4</button>
         <button class="button">5</button>
         <button class="button">6</button>
-        <button class="button">*</button>
+        <button class="button">&times;</button>
         <button class="button">1</button>
         <button class="button">2</button>
         <button class="button">3</button>
