--- a/index.html
+++ b/index.html
@@ -9,32 +9,34 @@
     <title>The Odin Project - Calculator</title>
   </head>
   <body>
-    <div class="calculator">
-      <div class="calculator__display">
-        <div class="calculator__display-top">H</div>
-        <div class="calculator__display-bottom">0</div>
-      </div>
-      <div class="calculator__keys">
-        <button class="button">AC</button>
-        <button class="button">C</button>
-        <button class="button">M</button>
-        <button class="button">&plusmn;</button>
-        <button class="button">7</button>
-        <button class="button">8</button>
-        <button class="button">9</button>
-        <button class="button">&divide;</button>
-        <button class="button">4</button>
-        <button class="button">5</button>
-        <button class="button">6</button>
-        <button class="button">&times;</button>
-        <button class="button">1</button>
-        <button class="button">2</button>
-        <button class="button">3</button>
-        <button class="button">-</button>
-        <button class="button">.</button>
-        <button class="button">0</button>
-        <button class="button">+</button>
-        <button class="button">=</button>
+    <div class="wrapper">
+      <div class="calculator">
+        <div class="calculator__display">
+          <div class="display-history">.</div>
+          <div class="display-current">0</div>
+        </div>
+        <div class="calculator__keys">
+          <button class="button">AC</button>
+          <button class="button">C</button>
+          <button class="button">M</button>
+          <button class="button">&plusmn;</button>
+          <button class="button">7</button>
+          <button class="button">8</button>
+          <button class="button">9</button>
+          <button class="button">&divide;</button>
+          <button class="button">4</button>
+          <button class="button">5</button>
+          <button class="button">6</button>
+          <button class="button">&times;</button>
+          <button class="button">1</button>
+          <button class="button">2</button>
+          <button class="button">3</button>
+          <button class="button">-</button>
+          <button class="button">.</button>
+          <button class="button">0</button>
+          <button class="button">+</button>
+          <button class="button">=</button>
+        </div>
       </div>
     </div>
   </body>
