Add event listener for calculator keys
Improved variable naming for better clarity
Set logic for handling number and operator keys
Added data attributes to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <div class="calculator">
         <div class="calculator__display">
-          <div class="display-history">.</div>
+          <div class="display-history"></div>
           <div class="display-current">0</div>
         </div>
         <div class="calculator__keys">
@@ -20,22 +20,22 @@
           <button class="button">C</button>
           <button class="button">M</button>
           <button class="button">&plusmn;</button>
-          <button class="button">7</button>
-          <button class="button">8</button>
-          <button class="button">9</button>
-          <button class="button">&divide;</button>
-          <button class="button">4</button>
-          <button class="button">5</button>
-          <button class="button">6</button>
-          <button class="button">&times;</button>
-          <button class="button">1</button>
-          <button class="button">2</button>
-          <button class="button">3</button>
-          <button class="button">-</button>
-          <button class="button">0</button>
-          <button class="button">.</button>
+          <button class="button" data-type="number">7</button>
+          <button class="button" data-type="number">8</button>
+          <button class="button" data-type="number">9</button>
+          <button class="button" data-type="operator">&divide;</button>
+          <button class="button" data-type="number">4</button>
+          <button class="button" data-type="number">5</button>
+          <button class="button" data-type="number">6</button>
+          <button class="button" data-type="operator">&times;</button>
+          <button class="button" data-type="number">1</button>
+          <button class="button" data-type="number">2</button>
+          <button class="button" data-type="number">3</button>
+          <button class="button" data-type="operator">-</button>
+          <button class="button" data-type="number">0</button>
+          <button class="button" data-type="number">.</button>
           <button class="button">=</button>
-          <button class="button">+</button>
+          <button class="button" data-type="operator">+</button>
         </div>
       </div>
     </div>
