--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="wrapper">
       <div class="calculator">
         <div class="calculator__display">
-          <div class="display-history"></div>
-          <div class="display-current">0</div>
+          <div class="display-input"></div>
+          <div class="display-output">0</div>
         </div>
         <div class="calculator__keys">
           <button class="button">AC</button>
