Update input display content
Added output display height

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <button class="button" data-type="operator">-</button>
           <button class="button" data-type="number">0</button>
           <button class="button" data-type="number">.</button>
-          <button class="button">=</button>
+          <button class="button" data-type="equal">=</button>
           <button class="button" data-type="operator">+</button>
         </div>
       </div>
