--- a/index.html
+++ b/index.html
@@ -23,19 +23,27 @@
           <button class="button" data-type="number">7</button>
           <button class="button" data-type="number">8</button>
           <button class="button" data-type="number">9</button>
-          <button class="button" data-type="operator">&divide;</button>
+          <button class="button" data-type="operator" data-value="divide">
+            &divide;
+          </button>
           <button class="button" data-type="number">4</button>
           <button class="button" data-type="number">5</button>
           <button class="button" data-type="number">6</button>
-          <button class="button" data-type="operator">&times;</button>
+          <button class="button" data-type="operator" data-value="multiply">
+            &times;
+          </button>
           <button class="button" data-type="number">1</button>
           <button class="button" data-type="number">2</button>
           <button class="button" data-type="number">3</button>
-          <button class="button" data-type="operator">-</button>
+          <button class="button" data-type="operator" data-value="subtract">
+            -
+          </button>
           <button class="button" data-type="number">0</button>
           <button class="button" data-type="number">.</button>
           <button class="button" data-type="equal">=</button>
-          <button class="button" data-type="operator">+</button>
+          <button class="button" data-type="operator" data-value="add">
+            +
+          </button>
         </div>
       </div>
     </div>
