Implement clear button logic
Added data-type to clear button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="calculator__keys">
           <button class="button">AC</button>
-          <button class="button">C</button>
+          <button class="button" data-type="clear">C</button>
           <button class="button">M</button>
           <button class="button">&plusmn;</button>
           <button class="button" data-type="number">7</button>
