Implement allcear button function
Added css data-type attribute to allcear button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="display-output">0</div>
         </div>
         <div class="calculator__keys">
-          <button class="button">AC</button>
+          <button class="button" data-type="allclear">AC</button>
           <button class="button" data-type="clear">C</button>
           <button class="button">M</button>
           <button class="button">&plusmn;</button>
