Implement logic for percent button
Adde data value attribute to button element

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           <button class="button" data-type="memory-recall">MR</button>
           <button class="button" data-type="memory-store">M+</button>
           <button class="button" data-type="memory-delete">M-</button>
-          <button class="button" data-type="operator">%</button>
+          <button class="button" data-type="operator" data-value="percent">
+            %
+          </button>
           <button class="button" data-type="number">7</button>
           <button class="button" data-type="number">8</button>
           <button class="button" data-type="number">9</button>
