Implement logic for plusminus button
Added data type attribute to button element

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <button class="button" data-type="operator" data-value="subtract">
             -
           </button>
-          <button class="button">&plusmn;</button>
+          <button class="button" data-type="plusminus">&plusmn;</button>
           <button class="button" data-type="number">0</button>
           <button class="button" data-type="number">.</button>
           <button class="button" data-type="operator" data-value="add">
