--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
           <button class="button" data-type="number">8</button>
           <button class="button" data-type="number">9</button>
           <button class="button" data-type="operator" data-value="divide">
-            &divide;
+            ÷
           </button>
           <button class="button" data-type="number">4</button>
           <button class="button" data-type="number">5</button>
           <button class="button" data-type="number">6</button>
           <button class="button" data-type="operator" data-value="multiply">
-            &times;
+            ×
           </button>
           <button class="button" data-type="number">1</button>
           <button class="button" data-type="number">2</button>
@@ -44,7 +44,7 @@
           </button>
           <button class="button" data-type="plusminus">&plusmn;</button>
           <button class="button" data-type="number">0</button>
-          <button class="button" data-type="number">.</button>
+          <button class="button" data-type="decimal">.</button>
           <button class="button" data-type="operator" data-value="add">
             +
           </button>
