Add keyboard support
Create handleKeyEvent function, that creates a pressedKey object. pressedKey object holds the type key.
Type is to decide, what kind of key is pressed, that manages if statement to be executed in the handleClickEvent function.

--- a/index.html
+++ b/index.html
@@ -34,22 +34,20 @@
           <button class="button" data-type="number">5</button>
           <button class="button" data-type="number">6</button>
           <button class="button" data-type="operator" data-value="multiply">
-            ×
-          </button>
-          <button class="button" data-type="number">1</button>
-          <button class="button" data-type="number">2</button>
+            ×</button
+          ><button class="button" data-type="number">1</button
+          ><button class="button" data-type="number">2</button>
           <button class="button" data-type="number">3</button>
           <button class="button" data-type="operator" data-value="subtract">
             -
           </button>
           <button class="button" data-type="plusminus">&plusmn;</button>
           <button class="button" data-type="number">0</button>
-          <button class="button" data-type="decimal">.</button>
-          <button class="button" data-type="operator" data-value="add">
-            +
-          </button>
-          <button class="button" data-type="allclear">AC</button>
-          <button class="button" data-type="clear">C</button>
+          <button class="button" data-type="decimal">.</button
+          ><button class="button" data-type="operator" data-value="add">
+            +</button
+          ><button class="button" data-type="allclear">AC</button
+          ><button class="button" data-type="clear">C</button>
           <button class="button" data-type="equal">=</button>
         </div>
       </div>
