Refactor variable names
Index.html: rename display-input to previous-input and display-output to current-input
Style.css: refactor css selectors per new names
App.js: rename inputDisplay to previousInput and outputDisplay to currentInput
    rename inputDisplayValue to previousOperand and outputDisplayValue to currentOperand

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="wrapper">
       <div class="calculator">
         <div class="calculator__display">
-          <div class="display-input"></div>
-          <div class="display-output">0</div>
+          <div class="previous-input"></div>
+          <div class="current-input">0</div>
           <span class="memory__container">M</span>
         </div>
         <div class="calculator__keys">
