--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="app.js" defer></script>
     <title>The Odin Project - Calculator</title>
   </head>
+  <!-- prettier-ignore -->
 
   <body>
     <div class="wrapper">
@@ -21,33 +22,25 @@
           <button class="button" data-type="memory-recall">MR</button>
           <button class="button" data-type="memory-store">M+</button>
           <button class="button" data-type="memory-delete">M-</button>
-          <button class="button" data-type="operator" data-value="percent">
-            %
-          </button>
+          <button class="button" data-type="operator" data-value="percent">%</button>
           <button class="button" data-type="number">7</button>
           <button class="button" data-type="number">8</button>
           <button class="button" data-type="number">9</button>
-          <button class="button" data-type="operator" data-value="divide">
-            ÷
-          </button>
+          <button class="button" data-type="operator" data-value="divide">÷</button>
           <button class="button" data-type="number">4</button>
           <button class="button" data-type="number">5</button>
           <button class="button" data-type="number">6</button>
-          <button class="button" data-type="operator" data-value="multiply">
-            ×</button
-          ><button class="button" data-type="number">1</button
-          ><button class="button" data-type="number">2</button>
+          <button class="button" data-type="operator" data-value="multiply">×</button>
+          <button class="button" data-type="number">1</button>
+          <button class="button" data-type="number">2</button>
           <button class="button" data-type="number">3</button>
-          <button class="button" data-type="operator" data-value="subtract">
-            -
-          </button>
+          <button class="button" data-type="operator" data-value="subtract">-</button>
           <button class="button" data-type="plusminus">&plusmn;</button>
           <button class="button" data-type="number">0</button>
-          <button class="button" data-type="decimal">.</button
-          ><button class="button" data-type="operator" data-value="add">
-            +</button
-          ><button class="button" data-type="allclear">AC</button
-          ><button class="button" data-type="clear">C</button>
+          <button class="button" data-type="decimal">.</button>
+          <button class="button" data-type="operator" data-value="add">+</button>
+          <button class="button" data-type="allclear">AC</button>
+          <button class="button" data-type="clear">C</button>
           <button class="button" data-type="equal">=</button>
         </div>
       </div>
