--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <button class="button" data-type="decimal">.</button>
           <button class="button" data-type="operator" data-value="add">+</button>
           <button class="button" data-type="allclear">AC</button>
-          <button class="button" data-type="clear">C</button>
+          <button class="button" data-type="clear-entry">CE</button>
           <button class="button" data-type="equal">=</button>
         </div>
       </div>
