Add info icon to show keybaord tooltip on hover
Add div for icon and tooltip description
Style new elements and increase breating space around new elements

--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
           <div class="current-input">0</div>
           <span class="memory__container">M</span>
         </div>
+
         <div class="calculator__keys">
+          <div class="info-icon" id="info-icon"></div>
+          <div class="info-description" id="info-description">
+            <p>Use <strong>UpArrow</strong> to store memory.</p>
+            <p>Use <strong>DownArrow</strong> to recall memory.</p>
+            <p>Use lowercase <strong>d</strong> to clear memory.</p>
+            <p>Use <strong>Backspace</strong> to clear entry (CE).</p>
+            <p>Use <strong>Delete</strong> to clear all (AC).</p>
+          </div>
+
           <button class="button" data-type="memory-recall">MR</button>
           <button class="button" data-type="memory-store">M+</button>
           <button class="button" data-type="memory-delete">M-</button>
@@ -44,6 +54,7 @@
           <button class="button" data-type="equal">=</button>
         </div>
       </div>
+
     </div>
   </body>
 </html>
